gcc/testsuite/g++.dg/cpp2a/concepts-requires24.C
// PR c++/97742
// { dg-do compile { target c++20 } }

template <int = requires { true	// { dg-error "expected" }
